objects/Web_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Web Orders</relationshipLabel>
        <relationshipName>Web_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Id. Decision Makers</fullName>
                </value>
                <value>
                    <fullName>Perception Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <summarizedField>Web_Order_Item__c.Price__c</summarizedField>
        <summaryForeignKey>Web_Order_Item__c.Web_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Web Order</label>
    <nameField>
        <label>Web Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>